# androidgles

./: .gitignore
ASTexture2d/app/src/main/cpp/: CMakeLists.txt  Texture2D.c  esUtil.c  esUtil.h  esUtil_Android.c  gleshook.c  gleshook.h  nativeInterface.cpp  render.cpp  render.h
ASTexture2d/app/src/main/cpp/libpng/: example.c  png.c  pngutils.c  pngutils.h
ASTexture2d/baker/src/main/cpp/: AndroidInterface.cpp  AndroidInterface.h  Base.h  CMakeLists.txt  ImageCell.cpp  ImageCell.h  ImageInfo.cpp  ImageInfo.h  ImageManager.cpp  ImageManager.h  ImageSize.cpp  ImageSize.h  MojingTextureBaker.cpp  MojingTextureBaker.h
ASTexture2d/copyimage/src/main/cpp/: CMakeLists.txt  MojingBaker.cpp  MojingBaker.h  MojingBakerAPI.cpp  MojingBakerAPI.h  MojingGLTestAPI.cpp  MojingGLTestAPI.h  MojingTextureBaker.cpp  MojingTextureBaker.h
ASTexture2d/fbo/src/main/cpp/: CMakeLists.txt  gldrawback.c  my_log.h
ASTexture2d/fbo/src/main/cpp/glbook/: Texture2D.c  esUtil.c  esUtil_Android.c
ASTexture2d/fbo/src/main/cpp/hook/: gleshook.c
ASTexture2d/fbo/src/main/cpp/libpng/: pngrutil.c
ASTexture2d/fbo/src/main/cpp/sample/: nativeInterface.cpp  nativeInterface.h  render.cpp
ASTexture2d/pixmapbuffer/src/main/cpp/: CMakeLists.txt  DynamicLibrary.cpp  glbackdraw.cpp  glbackdraw.h
ASgles3Jni/app/src/main/cpp/: CMakeLists.txt  ImageSobelFilter.cpp  RendererES2.cpp  aopencl.c  gles3jni.cpp  gles3jni.h  gleshook.c
ASgles3Jni/app/src/main/cpp/CL/: cl.h
ASgles3Jni/app/src/main/cpp/gleshook/: callstack.c  eglexthook.c  eglhook.c  elf_hooker.cpp  gleshook.c  hookutils.c  hookutils.h  threadhook.c
ASgles3Jni/offscreen/src/main/cpp/: CMakeLists.txt
ASgles3Jni/vkview/src/main/cpp/: CMakeLists.txt  RendererES2.cpp  ThreadPool.h  TriangleVK.cpp  TriangleVK.hpp  gles3jni.cpp  gles3jni.h  mylog.h  vulkan_wrapper.cpp  vulkan_wrapper.h
ASgles3Jni/vkview/src/main/cpp/gl/: ThreadPool.cpp  gles3jni.cpp  gles3jni.h
ASgles3Jni/vkview/src/main/cpp/glm/: glm.hpp  mat2x2.hpp  mat2x3.hpp  mat4x2.hpp
ASgles3Jni/vkview/src/main/cpp/glm/detail/: _vectorize.hpp  dummy.cpp  func_common.inl  func_common_simd.inl  func_exponential.hpp  func_exponential.inl  func_exponential_simd.inl  func_geometric.hpp  func_integer.inl  func_matrix.inl  func_matrix_simd.inl  func_trigonometric.hpp  func_vector_relational.hpp  glm.cpp  precision.hpp  setup.hpp  type_gentype.hpp  type_gentype.inl  type_mat.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x4.hpp  type_mat4x4.inl  type_vec.hpp  type_vec2.hpp  type_vec4_simd.inl
ASgles3Jni/vkview/src/main/cpp/glm/gtc/: bitfield.hpp  color_space.inl  constants.hpp  functions.hpp  integer.hpp  integer.inl  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.inl  quaternion.inl  quaternion_simd.inl  random.hpp  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_precision.hpp  type_ptr.hpp  ulp.hpp
ASgles3Jni/vkview/src/main/cpp/glm/gtx/: bit.inl  closest_point.hpp  closest_point.inl  color_encoding.hpp  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  common.hpp  common.inl  component_wise.hpp  dual_quaternion.hpp  dual_quaternion.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  hash.hpp  hash.inl  intersect.hpp  intersect.inl  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_interpolation.inl  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  matrix_transform_2d.inl  mixed_product.hpp  mixed_product.inl  norm.hpp  normalize_dot.hpp  normalize_dot.inl  number_precision.hpp  optimum_pow.hpp  optimum_pow.inl  orthonormalize.hpp  perpendicular.hpp  (+13 more)
ASgles3Jni/vkview/src/main/cpp/glm/simd/: matrix.h
ASgles3Jni/vkview/src/main/cpp/shaderc/: CMakeLists.txt
ASgles3Jni/vkview/src/main/cpp/vk/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_data.h  vulkan_device.cpp  vulkan_device.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_tutorial.cpp  vulkan_tutorial.h  vulkan_utils.cpp  vulkan_utils.h  vulkan_utils_jni.cpp  vulkan_utils_jni.h
AssimpAndroid/app/src/main/cpp/: CMakeLists.txt
AssimpAndroid/app/src/main/cpp/assimp/: CMakeLists.txt  revision.h
AssimpAndroid/app/src/main/cpp/assimp/code/: .editorconfig  AMFImporter_Postprocess.cpp  BlenderDNA.inl  FBXAnimation.cpp  FBXConverter.cpp  FBXDocument.h  FBXDocumentUtil.h  FBXMaterial.cpp  FBXModel.cpp  FBXProperties.h  ImporterRegistry.cpp  PostStepRegistry.cpp  STEPFile.h  StringUtils.h  glTFAsset.inl  glTFAssetWriter.inl
AssimpAndroid/app/src/main/cpp/assimp/contrib/Open3DGC/: o3dgcSC3DMCDecoder.inl  o3dgcSC3DMCEncoder.inl  o3dgcTriangleListEncoder.inl
AssimpAndroid/app/src/main/cpp/assimp/contrib/openddlparser/: CREDITS  README.md
AssimpAndroid/app/src/main/cpp/assimp/contrib/rapidjson/: readme.md
AssimpAndroid/app/src/main/cpp/assimp/contrib/zlib/: CMakeLists.txt  zconf.h.cmakein  zconf.h_back
AssimpAndroid/app/src/main/cpp/assimp/include/assimp/: color4.inl  config.h  (+7 more)
AssimpAndroid/app/src/main/cpp/modelAssimp/: modelAssimp.cpp
AssimpAndroid/app/src/main/cpp/nativeCode/common/: assimpLoader.cpp  myGLCamera.cpp
AssimpAndroid/app/src/main/cpp/nativeCode/modelAssimp/: Mesh.h  Model.cpp  Shader.h  modelAssimp.cpp
AssimpAndroid/app/src/main/cpp/ndk_helper/: GLContext.cpp  JNIHelper.cpp  shader.cpp
asgllearn/ETC2TextureLoader/src/main/cpp/: CMakeLists.txt
asgllearn/shardcontext/src/main/cpp/: CMakeLists.txt  Renderer.cpp  RendererES2.cpp  gles3jni.cpp  gles3jni.h
glesbook/02hellotriangle/src/main/cpp/: CMakeLists.txt
glesbook/14ParticleSystem/src/main/cpp/: CMakeLists.txt  ParticleSystem.c
glesbook/ImageTargetTexture/src/main/cpp/: CMakeLists.txt  DynamicLibrary.cpp  GraphicBuffer.cpp  GraphicBuffer.h  Graphics.cpp  Graphics.h  ImageTargetTexture.c  ImageTargetTexture.cpp  Simple_Texture2D.cpp  esShader.cpp  esUtil.cpp  esUtil.h  esUtil_Android.cpp  my_log.h
glesbook/PixmapBuffer/src/main/cpp/: CMakeLists.txt  Instancing.c
(+612 files in other folders)
